[package]
name = "package-manager"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "store"
# path = "src/bin/store.rs"

#[[bin]]
#name = "converter"
#path = "bin/converter.rs"

# [[bin]]
# name = "down"
# path = "bin/down.rs"

[[example]]
name = "pitree"
path = "examples/pitree.rs"


[[bin]]
name = "bin-repo"
path = "bin/bin-repo.rs"

[[bin]]
name = "source-repo"
path = "bin/source-repo.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[dependencies]
actix-files = "*"
actix-web = "*"
anyhow = "*"
bzip2 = "*"
chrono = "*"
colored = "*"
error-chain = "*"
flate2 = { version = "*", features = ["tokio"] }
git2 = "*"
indicatif = "*"
lazy_static = "*"
reqwest = "0.11.2"
semver = "*"
serde = {version = "*", features = ["derive"]}
serde_yaml = "*"
sha2 = "*"
shellfn = "*"
solvent = "*"
tar = "*"
text-diff = "*"
tokio = { version = "1.3.0", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
url =  "*"
walkdir = "*"
xz2 = "*"
zip = "0.5.10"
zstd = "*"
